Add initial `ThreeTunnel`

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
+        "build:example": "vite build -c vite.config.example.ts",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "ts": "tsc"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
@@ -24,6 +26,7 @@
         "react-dom": "^18.2.0",
         "three": "^0.157.0",
         "typescript": "^5.0.2",
-        "vite": "^4.4.5"
+        "vite": "^4.4.5",
+        "vite-plugin-dts": "^3.6.0"
     }
 }
