--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "ts": "tsc"
     },
     "devDependencies": {
+        "@types/file-saver": "^2.0.5",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@types/three": "^0.156.0",
@@ -28,5 +29,8 @@
         "typescript": "^5.0.2",
         "vite": "^4.4.5",
         "vite-plugin-dts": "^3.6.0"
+    },
+    "dependencies": {
+        "file-saver": "^2.0.5"
     }
 }
