--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "three-tunnel",
-    "private": true,
     "version": "0.0.6",
     "type": "module",
+    "main": "dist/three-tunnel.js",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
@@ -11,6 +11,23 @@
         "preview": "vite preview",
         "ts": "tsc"
     },
+    "keywords": [
+        "tunnel",
+        "grout",
+        "grouting",
+        "rock",
+        "rock-engineer",
+        "rock-engineering",
+        "three",
+        "threejs"
+    ],
+    "author": "André Wisén <andre.wisen@gmail.com> (https://andrewisen.se/)",
+    "contributors": [
+        "André Wisén",
+        "Louise Sjölund"
+    ],
+    "license": "MIT",
+    "homepage": "https://github.com/andrewisen-tikab/three-tunnel",
     "devDependencies": {
         "@types/file-saver": "^2.0.5",
         "@types/react": "^18.2.15",
@@ -23,6 +40,7 @@
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "file-saver": "^2.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "three": "^0.157.0",
@@ -30,7 +48,7 @@
         "vite": "^4.4.5",
         "vite-plugin-dts": "^3.6.0"
     },
-    "dependencies": {
-        "file-saver": "^2.0.5"
+    "peerDependencies": {
+        "three": "^0.157.0"
     }
 }
