--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build:example": "vite build -c vite.config.example.ts",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "ts": "tsc"
+        "ts": "tsc",
+        "version": "node setVersion.cjs"
     },
     "keywords": [
         "tunnel",
