--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
             - name: 🛠️ Publish
               run: |
                   yarn install
+                  yarn version
                   yarn build
                   yarn build:example
             - name: Upload artifact
