--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "three": "^0.157.0",
+        "three-bvh-csg": "^0.0.10",
         "typescript": "^5.0.2",
         "vite": "^4.4.5",
         "vite-plugin-dts": "^3.6.0"
     },
     "peerDependencies": {
-        "three": "^0.157.0"
+        "three": "^0.157.0",
+        "three-bvh-csg": "^0.0.10"
     }
 }
