--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "ts": "tsc",
-        "version": "node setVersion.cjs"
+        "version": "node setVersion.cjs",
+        "docs": "typedoc"
     },
     "keywords": [
         "tunnel",
@@ -45,6 +46,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "three": "^0.157.0",
+        "typedoc": "^0.25.2",
         "typescript": "^5.0.2",
         "vite": "^4.4.5",
         "vite-plugin-dts": "^3.6.0"
