--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,3 +18,6 @@ jobs:
             - name: ⏳ Checking TypeScript...
               run: |
                   yarn ts
+                  yarn build
+                  yarn build:example
+                  yarn docs
