--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,7 @@ jobs:
                   yarn version
                   yarn build
                   yarn build:example
+                  yarn docs
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v2
               with:
