--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     },
     "peerDependencies": {
         "three": "^0.157.0"
+    },
+    "dependencies": {
+        "@doodle3d/clipper-js": "^1.0.11",
+        "three-spritetext": "^1.8.1"
     }
 }
