--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
         "typedoc": "^0.25.2",
         "typescript": "^5.0.2",
         "vite": "^4.4.5",
-        "vite-plugin-dts": "^3.6.0"
+        "vite-plugin-dts": "^3.6.0",
+        "vite-plugin-pwa": "^0.16.5"
     },
     "peerDependencies": {
         "three": "^0.157.0"
